rebuilding site by hugo